# cozmo-companion

./: .env-template  .gitignore  .pre-commit-config.yaml  README.md  cozmo_echo.py  dialogue_cozmo.py  pyproject.toml  requirements.txt  run_convo_cozmo.py
logs/: chatbot_log.txt
src/cozmo_companion/: __main__.py  assistant.py  cli.py  constants.py  dialogue_cozmo.py  logging_config.py  recorder.py  recorder_cozmo.py
tests/: conftest.py  test_assistant.py  test_chatbot_functionalities.py  test_ibm_service_initialization.py  test_marvin_configuration.py
tests/integration/: test_chatbot_integration.py  test_ibm_service_initialization.py  test_marvin_configuration.py
tests/unit/: test_chatbot_utils.py
